@@ -6,45 +6,52 @@ import io.jenetics.IntegerGene;
 import io.jenetics.Phenotype;
 import io.jenetics.engine.Engine;
 import io.jenetics.engine.EvolutionResult;
-import io.jenetics.engine.EvolutionStart;
-import net.chesstango.evaluation.tuning.fitnessfunctions.FitnessByLeastSquare;
+import net.chesstango.evaluation.GameEvaluator;
+import net.chesstango.evaluation.evaluators.EvaluatorSEandImp03;
+import net.chesstango.evaluation.tuning.fitnessfunctions.FitnessBySearch;
 import net.chesstango.evaluation.tuning.fitnessfunctions.FitnessFunction;
 import net.chesstango.evaluation.tuning.geneticproviders.GeneticProvider;
-import net.chesstango.evaluation.tuning.geneticproviders.GeneticProviderNIntChromosomes;
+import net.chesstango.evaluation.tuning.geneticproviders.GeneticProvider2FactorsGenes;
+import net.chesstango.evaluation.tuning.geneticproviders.GeneticProvider4FactorsGenes;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 /**
  * @author Mauricio Coria
  */
 public class TuningMain {
-    private static final int POPULATION_SIZE = 20;
-    private static final int GENERATION_LIMIT = 100000;
+    private static final Logger logger = LoggerFactory.getLogger(TuningMain.class);
+    private static final int POPULATION_SIZE = 10;
+    private static final int GENERATION_LIMIT = 100;
 
     public static void main(String[] args) {
-        //GeneticProvider geneticProvider = new GeneticProvider4FactorsGenes();
-        GeneticProvider geneticProvider = new GeneticProviderNIntChromosomes(10);
+        //GeneticProvider geneticProvider = new GeneticProvider2FactorsGenes();
+        GeneticProvider geneticProvider = new GeneticProvider4FactorsGenes();
+        //GeneticProvider geneticProvider = new GeneticProviderNIntChromosomes(10);
 
         //FitnessFunction fitnessFunction = new FitnessByMatch(geneticProvider::createGameEvaluator);
-        //FitnessFunction fitnessFunction = new FitnessBySearch((Genotype<IntegerGene> genotype) -> GeneticProvider4FactorsGenes.createGameEvaluator(GameEvaluatorSEandImp02.class, genotype));
-        FitnessFunction fitnessFunction = new FitnessByLeastSquare();
+        FitnessFunction fitnessFunction = new FitnessBySearch();
+        //FitnessFunction fitnessFunction = new FitnessByLeastSquare();
 
-        TuningMain main = new TuningMain(fitnessFunction, geneticProvider);
+        TuningMain main = new TuningMain(fitnessFunction, geneticProvider, EvaluatorSEandImp03.class);
 
         main.findGenotype();
     }
 
+    private final Class<? extends GameEvaluator> gameEvaluatorClass;
     private final GeneticProvider geneticProvider;
     private final FitnessFunction fitnessFn;
     private final Map<String, Long> fitnessMemory;
 
-    public TuningMain(FitnessFunction fitnessFn, GeneticProvider geneticProvider) {
+    public TuningMain(FitnessFunction fitnessFn, GeneticProvider geneticProvider, Class<? extends GameEvaluator> gameEvaluatorClass) {
+        this.gameEvaluatorClass = gameEvaluatorClass;
         this.geneticProvider = geneticProvider;
         this.fitnessFn = fitnessFn;
-        this.fitnessMemory = new HashMap<>();
+        this.fitnessMemory = Collections.synchronizedMap(new HashMap<>());
     }
 
     private void findGenotype() {
@@ -52,13 +59,13 @@ public class TuningMain {
         fitnessFn.start();
 
         Engine<IntegerGene, Long> engine = Engine.builder(this::fitness, geneticProvider.getGenotypeFactory())
-                .selector(new EliteSelector<>(10))
+                .selector(new EliteSelector<>(POPULATION_SIZE / 5))
                 //.constraint(geneticProvider.getPhenotypeConstraint())
                 .populationSize(POPULATION_SIZE)
                 .executor(executor)
                 .build();
 
-        EvolutionStart<IntegerGene, Long> start = geneticProvider.getEvolutionStart(POPULATION_SIZE);
+        //EvolutionStart<IntegerGene, Long> start = geneticProvider.getEvolutionStart(POPULATION_SIZE);
 
         Phenotype<IntegerGene, Long> result = engine
                 //.stream(start)
@@ -67,12 +74,14 @@ public class TuningMain {
                 .collect(EvolutionResult.toBestPhenotype());
 
         System.out.println("El mejor fenotipo encontrado = " + result.fitness());
-        System.out.println("Y su genotipo = " + result.genotype());
+        System.out.println("Y su genotipo = " + geneticProvider.genotypeToString(result.genotype()));
 
 
         Set<Map.Entry<String, Long>> entrySet = fitnessMemory.entrySet();
-        List<Map.Entry<String, Long>> entryList = entrySet.stream().collect(Collectors.toList());
-        Collections.sort(entryList, Collections.reverseOrder(Comparator.comparingLong(Map.Entry::getValue)));
+        List<Map.Entry<String, Long>> entryList = entrySet.stream()
+                .sorted(Collections.reverseOrder(Comparator.comparingLong(Map.Entry::getValue)))
+                .toList();
+
         entryList.stream().limit(20).forEach(entry -> {
             System.out.println("key = [" + entry.getKey() + "]; value=[" + entry.getValue() + "]");
         });
@@ -82,7 +91,6 @@ public class TuningMain {
         executor.shutdown();
     }
 
-    /*
     private long fitness(Genotype<IntegerGene> genotype) {
         String keyGenes = geneticProvider.getKeyGenesString(genotype);
 
@@ -90,17 +98,16 @@ public class TuningMain {
 
         if (points == null) {
 
-            points = fitnessFn.fitness(genotype);
+            GameEvaluator evaluator = geneticProvider.createGameEvaluator(gameEvaluatorClass, genotype);
 
-            geneticProvider.printGeneAndPoints(genotype, points);
+            points = fitnessFn.fitness(evaluator);
 
             fitnessMemory.put(keyGenes, points);
         }
 
-        return points;
-    }*/
+        logger.info("Evaluacion con {} ; puntos = [{}]", geneticProvider.genotypeToString(genotype), points);
 
-    private long fitness(Genotype<IntegerGene> genotype) {
-        return fitnessFn.fitness(genotype);
+        return points;
     }
+
 }
